fix(button): add align center (#UIM-790) (#757)

--- a/packages/mosaic/button/button.scss
+++ b/packages/mosaic/button/button.scss
@@ -50,6 +50,7 @@
 
     .mc-button-wrapper {
         display: flex;
+        align-items: center;
 
         .mc-icon {
             margin: auto;
